--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -1,13 +1,16 @@
+body {
+text-align:center;
+background-color:black;
+}
+
 h1 { font-family: Verdana, Geneva, sans-serif; 
     font-size: 50px; 
     font-style: normal; 
     font-variant: normal; 
     color: #ffffff;
-    text-align: center;
     }
 
-h2 { font-family: Verdana, Geneva, sans-serif; 
+.cta { font-family: Verdana, Geneva, sans-serif; 
     font-size: 16px; 
     color: aquamarine;
-    text-align: center;
 }
