--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -8,7 +8,14 @@ h1 { font-family: Verdana, Geneva, sans-serif;
     font-style: normal; 
     font-variant: normal; 
     color: #ffffff;
+    font-weight:normal;
     }
+
+h2 {
+    font-family: Verdana, Geneva, sans-serif;
+    font-size:42px;
+    font-weight:300;
+}
 
 .cta { font-family: Verdana, Geneva, sans-serif; 
     font-size: 16px; 
